<resources>
    <string name="app_name">پیام رسان</string>

    <string name="title_activity_main">پیام رسان</string>
    <string name="title_activity_chat">پیام رسان</string>
    <string name="title_activity_lesson">دروس</string>
    <string name="title_activity_download">بروز رسانی</string>





    <!--==================================================================== -->
    <!--Chat Fragment -->
    <!--==================================================================== -->
    <string name="messanger_label_send">ارسال</string>
    <string name="messanger_ChatUser_DialogFragment_Title">لیست مخاطبین</string>
    <string name="messanger_chat_message_error_db_error">خطا در ذخیره سازی اطلاعات</string>
    <string name="messanger_chat_message_isTyping">در حال تایپ ...</string>
    <string name="messanger_chat_state_deactive">لطفا یکی از مخاطبین را برای شروع گفتگو انتخاب کنید</string>

    <string name="messanger">دوربین</string>
    <string name="messanger_chat_label_media_video">کلیپ</string>
    <string name="messanger_chat_label_media_recordvideo">فیلمبرداری</string>
    <string name="messanger_chat_label_media_gallory">گالری</string>
    <string name="messanger_chat_label_media_file">فایل</string>
    <string name="messanger_chat_label_media_back">برگشت</string>

    <!--==================================================================== -->
    <!--Notification -->
    <!--==================================================================== -->
    <string name="messanger_notification_title_chat_add">پیام جدید</string>

    <!--==================================================================== -->

    <!--==================================================================== -->
    <!--File manager -->
    <!--==================================================================== -->
    <string name="messanger_message_file_read_not_found">فایل یافت نشد</string>
    <string name="messanger_message_file_read_cant">امکان خواندن فایل وجود ندارد</string>
    <string name="messanger_message_file_read_ex">خطا در خواندن فایل</string>
    <string name="messanger_message_file_write_ex">امکان ذخیره سازی فایل وجود ندارد</string>

    <!--==================================================================== -->
    <!--Download manager -->
    <!--==================================================================== -->
    <string name="messanger_message_download_complete">دانلود با موفقیت انجام شد</string>
    <string name="messanger_message_download_canceled">دانلود لغو شد</string>
    <string name="messanger_message_downloading">در حال دانلود</string>
    <string name="messanger_message_download_error">دانلود با خطا مواجه شد</string>
    <string name="messanger_message_download_in_queue">در صف دانلود قرار گرفت</string>

    <!--==================================================================== -->
    <!--Upload manager -->
    <!--==================================================================== -->
    <string name="messanger_message_upload_error">آپلود فایل با خطا مواجه شد</string>
    <string name="messanger_message_upload_in_queue">در صف آپلود قرار گرفت</string>


    <!--==================================================================== -->
    <!--Message -->
    <!--==================================================================== -->
    <string name="messanger_message_loading_student">در حال دریافت اطلاعات دانش آموز</string>
    <string name="messanger_message_loading_chatUser">در حال دریافت اطلاعات مخاطبین</string>
    <string name="messanger_message_no_student">دانش آموزی وجود ندارد</string>
    <string name="messanger_message_db_insert_error">خطا در ثبت اطلاعات در پایگاه داده</string>
    <string name="messanger_message_no_entity">موردی وجود ندارد</string>

    <!--==================================================================== -->
    <!--Sliding Menu -->
    <!--==================================================================== -->

    <string name="messanger_menu_newchannel">ایجاد کانال جدید</string>
    <string name="messanger_menu_edit_profileImage">تغییر عکس پروفایل</string>
    <string name="messanger_menu_contact">مخاطبان</string>
    <string name="messanger_menu_about_us">درباره ما</string>


</resources>
